# websocket-chat

client/: Cargo.toml
client/src/: chat_client.rs  main.rs
client/src/chat_client/: chat_client.rs  client_error.rs  mod.rs
persistence/: Cargo.toml
persistence/src/: crud_error.rs  lib.rs
persistence/src/simple_file_db/: mod.rs  simple_file_db.rs
protocol/: Cargo.toml
protocol/src/: error.rs  lib.rs
server/: Cargo.toml
server/src/: chat_server.rs  main.rs
server/src/chat_server/: account_manager.rs  chat_server.rs  mod.rs
server/src/chat_server/account_manager/: account_error.rs  account_manager.rs  mod.rs
