[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
protocol = { path = "../protocol" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
log = { version = "0.4.27" }
env_logger = "0.11.8"
