[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
protocol = { path = "../protocol" }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
log = { version = "0.4.27" }
env_logger = "0.11.8"
chrono = "0.4.41"
colored = "3.0.0"
tokio-util = "0.7.16"
