[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
protocol = { path = "../protocol" }
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
serde_json = "1.0.143"
log = { version = "0.4.27" }
env_logger = "0.11.8"
tokio-util = "0.7.16"
uuid = { version = "1.18.0", features = ["v4"] }
ctrlc = "3.4.7"
